@@ -45,6 +45,7 @@ android {
     testOptions {
         unitTests.all {
             it.useJUnitPlatform()
+            it.jvmArgs("-XX:+EnableDynamicAgentLoading")
         }
     }
 }
